2009-11-02  Alan Modra  <amodra@bigpond.net.au>

	* messages.c (as_fatal): Apply 2001-01-15 change and followup
	to second copy of function.

2009-10-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/tc-hppa.c (pa_build_unwind_subspace): Replace start symbol
	with local symbol.

2009-10-29  Sebastian Pop  <sebastian.pop@amd.com>

	* config/tc-i386.c (build_modrm_byte): Do not swap REG and
	NDS operands for FMA4.

2009-10-29  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (neon_tab_entry): Fix VNMLA/VNMLS opcodes.

2009-10-29  Paul Brook  <paul@codesourcery.com>

	* doc/c-arm.texi: Document ARM -mcpu=cortex-a5.
	* config/arm/tc-arm.c (arm_cpu_option_table): Add cortex-a5.

2009-10-29  Tristan Gingold  <gingold@adacore.com>

	* config/tc-mep.c (md_pseudo_table): Remove dwarf2 debug pseudo
	as they are already defined in obj-elf.c
	* config/tc-m32c.c (md_pseudo_table): Ditto.
	* config/tc-spu.c (md_pseudo_table): Ditto.
	* config/tc-avr.c (md_pseudo_table): Ditto.

2009-10-29  Alan Modra  <amodra@bigpond.net.au>

	* doc/as.texinfo (Set): Delete incorrect HPPA para.

2009-10-28  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (opcode_lookup): Allow VFP/NEON type suffixes
	unconditionally.

2009-10-28  Alan Modra  <amodra@bigpond.net.au>

	PR gas/10856
	* expr.c (resolve_expression): Only add "left" value to O_symbol
	expression when the symbol is undefined and different from the
	original symbol.  Simplify negative logic.

2009-10-27  Tristan Gingold  <gingold@adacore.com>

	* config/tc-avr.c (md_pseudo_table): Add dwarf2 debug pseudo.
	* config/tc-avr.h (DWARF2_LINE_MIN_INSN_LENGTH): Define.
	(DWARF2_ADDR_SIZE): Define.

2009-10-27  Alan Modra  <amodra@bigpond.net.au>

	PR gas/10850
	* listing.c (listing_flags): Delete.
	* listing.h: Likewise.
	* read.c (potable <lflags>): Call s_ignore.

2009-10-26  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo: Add mention of RX port and inclusion of RX
	documentation.
